tests/type_check/hll_cast_invalid.err.expected
error: at 14:34: [HTC-InvalidCast] In function 'int_to_bool': cast from i64 to bool is not supported
    |
 13 | 
 14 | fn int_to_bool(x: i64) -> bool { x as bool }
    |                                  ^^^^^^^^^
 15 | fn float_to_bool(x: f64) -> bool { x as bool }
    |
error: at 15:36: [HTC-InvalidCast] In function 'float_to_bool': cast from f64 to bool is not supported
    |
 14 | fn int_to_bool(x: i64) -> bool { x as bool }
 15 | fn float_to_bool(x: f64) -> bool { x as bool }
    |                                    ^^^^^^^^^
 16 | fn struct_to_int(p: P) -> i64 { p as i64 }
    |
error: at 16:33: [HTC-InvalidCast] In function 'struct_to_int': cast from P to i64 is not supported
    |
 15 | fn float_to_bool(x: f64) -> bool { x as bool }
 16 | fn struct_to_int(p: P) -> i64 { p as i64 }
    |                                 ^^^^^^^^
 17 | fn int_to_ptr(x: u64) -> *u8 { x as *u8 }
    |
error: at 17:32: [HTC-InvalidCast] In function 'int_to_ptr': cast from u64 to *u8 is not supported
    |
 16 | fn struct_to_int(p: P) -> i64 { p as i64 }
 17 | fn int_to_ptr(x: u64) -> *u8 { x as *u8 }
    |                                ^^^^^^^^
 18 | fn array_to_int(a: [u8; 4]) -> u32 { a as u32 }
    |
error: at 18:38: [HTC-InvalidCast] In function 'array_to_int': cast from [u8; 4] to u32 is not supported
    |
 17 | fn int_to_ptr(x: u64) -> *u8 { x as *u8 }
 18 | fn array_to_int(a: [u8; 4]) -> u32 { a as u32 }
    |                                      ^^^^^^^^
    |
