tests/type_check/hll_cast_invalid.si
# Paired negative for `hll_cast.si`. Every fn fires HTC-InvalidCast on
# a cast pair not in the supported matrix:
#
#   fn                  from       to         reason
#   int_to_bool         i64        bool       casts *to* bool are rejected; use `!= 0`
#   float_to_bool       f64        bool       same
#   struct_to_int       P          i64        no path from custom types to scalars
#   int_to_ptr          u64        *u8        would break non-null-by-construction invariant
#   array_to_int        [u8; 4]    u32        no path from aggregate to scalar
#

struct P: Copy + Drop { x: i64 }

fn int_to_bool(x: i64) -> bool { x as bool }
fn float_to_bool(x: f64) -> bool { x as bool }
fn struct_to_int(p: P) -> i64 { p as i64 }
fn int_to_ptr(x: u64) -> *u8 { x as *u8 }
fn array_to_int(a: [u8; 4]) -> u32 { a as u32 }
